package com.example.camel;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class CamelSpringBootApplication {

    public static void main(String[] args) {
        SpringApplication.run(CamelSpringBootApplication.class, args);
    }
}
